--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <meta name="google-site-verification" content="34GDiRucxSxHzDnCtPF-BKqcgceCzutZQVeIOd9h-Yg" />
-
-    <title>Rapaka Ravikanth</title>
+  <meta charset="utf-8">
+  <meta name="google-site-verification" content="34GDiRucxSxHzDnCtPF-BKqcgceCzutZQVeIOd9h-Yg">
+  <title>Rapaka Ravikanth — Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to my GitHub Page</h1>
+  <h1>Rapaka Ravikanth</h1>
+  <p>Frontend Developer</p>
+  <p>GitHub: <a href="https://github.com/Ravikanthrapaka">Ravikanthrapaka</a></p>
 </body>
 </html>
